# temp_sensor_repo

./: README.md
nrf52dk_firmware/: CMakeLists.txt  prj.conf
nrf52dk_firmware/boards/: nrf52dk_nrf52832.overlay
nrf52dk_firmware/src/: main.c
nrf52dk_firmware/src/temp_sensor_service/: ble_comm.c  ble_comm.h
